Fix image visibility

--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
                 <div class="visual-elements">
                     <!-- Emotional State Images -->
                     <div class="state-images">
-                        <img id="neutral-image" src="images/0.jpg" alt="Neutral state (0)" class="state-image neutral-image">
+                        <img id="neutral-image" src="images/0.jpg" alt="Neutral state (0)" class="state-image neutral-image hidden">
                         <img id="positive-image" src="images/3.jpg" alt="Positive/Manic state (3)" class="state-image positive-image hidden">
-                        <img id="depressive-image" src="images/-3.png" alt="Depressive state (-3)" class="state-image depressive-image hidden">
+                        <img id="depressive-image" src="images/-3.png" alt="Depressive state (-3)" class="state-image depressive-image">
                     </div>
                     <!-- Breathing Visualization -->
                     <div class="breathing-circle">
