Fix image positioning and z-index - center images properly and ensure they appear above other elements

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <div class="state-images">
                         <img id="neutral-image" src="images/0.jpg" alt="Neutral state (0)" class="state-image neutral-image hidden" loading="eager">
                         <img id="positive-image" src="images/3.jpg" alt="Positive/Manic state (3)" class="state-image positive-image hidden" loading="eager">
-                        <img id="depressive-image" src="images/-3.png" alt="Depressive state (-3)" class="state-image depressive-image" loading="eager" style="opacity: 1; display: block; visibility: visible; transform: scale(1) translateY(0);">
+                        <img id="depressive-image" src="images/-3.png" alt="Depressive state (-3)" class="state-image depressive-image" loading="eager" style="opacity: 1; display: block; visibility: visible; transform: translate(-50%, -50%) scale(1); z-index: 20;">
                     </div>
                     <!-- Breathing Visualization -->
                     <div class="breathing-circle">
