Complete image display system overhaul - remove display:none, simplify positioning, fix animations, increase z-index

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#1a1a2e">
     <title>Dual Spectrum - An Interactive Expression of Bipolar I Disorder</title>
@@ -108,7 +109,7 @@
                     <div class="state-images">
                         <img id="neutral-image" src="images/0.jpg" alt="Neutral state (0)" class="state-image neutral-image hidden" loading="eager">
                         <img id="positive-image" src="images/3.jpg" alt="Positive/Manic state (3)" class="state-image positive-image hidden" loading="eager">
-                        <img id="depressive-image" src="images/-3.png" alt="Depressive state (-3)" class="state-image depressive-image" loading="eager" style="opacity: 1; display: block; visibility: visible; transform: translate(-50%, -50%) scale(1); z-index: 20;">
+                        <img id="depressive-image" src="images/-3.png" alt="Depressive state (-3)" class="state-image depressive-image" loading="eager" style="opacity: 1; visibility: visible; transform: scale(1); z-index: 25;">
                     </div>
                     <!-- Breathing Visualization -->
                     <div class="breathing-circle">
