--- a/index.html
+++ b/index.html
@@ -107,9 +107,10 @@
                 <div class="visual-elements">
                     <!-- Emotional State Images - All 7 images for smooth transitions -->
                     <div class="state-images">
+                        <img id="image-neg3" src="images/-3.png" alt="State -3" class="state-image active" data-value="-3" loading="eager" style="opacity: 1; visibility: visible; transform: scale(1); z-index: 25;">
                         <img id="image-neg2" src="images/-2.png" alt="State -2" class="state-image" data-value="-2" loading="eager">
                         <img id="image-neg1" src="images/-1.png" alt="State -1" class="state-image" data-value="-1" loading="eager">
-                        <img id="image-neg3" src="images/-3.png" alt="State -3" class="state-image active" data-value="-3" loading="eager" style="opacity: 1; visibility: visible; transform: scale(1); z-index: 25;">
+                        <img id="image-0" src="images/0.jpg" alt="State 0" class="state-image" data-value="0" loading="eager">
                         <img id="image-1" src="images/1.jpg" alt="State 1" class="state-image" data-value="1" loading="eager">
                         <img id="image-2" src="images/2.jpg" alt="State 2" class="state-image" data-value="2" loading="eager">
                         <img id="image-3" src="images/3.jpg" alt="State 3" class="state-image" data-value="3" loading="eager">
