--- a/index.html
+++ b/index.html
@@ -26,84 +26,7 @@
             </header>
 
             <main>
-                <div class="state-indicator">
-                    <span class="current-state">Depressive</span>
-                </div>
-
-                <!-- Dynamic thoughts/feelings -->
-                <div class="thoughts-container">
-                    <p class="thought-text" id="thought-text">
-                        Everything feels heavy. Time moves slowly.
-                    </p>
-                </div>
-
-                <div class="state-toggle">
-                    <button id="manic-btn" class="state-btn manic-btn">
-                        <span>Manic</span>
-                    </button>
-                    <button id="mixed-btn" class="state-btn mixed-btn">
-                        <span>Mixed</span>
-                    </button>
-                    <button id="depressive-btn" class="state-btn depressive-btn active">
-                        <span>Depressive</span>
-                    </button>
-                </div>
-
-                <div class="description">
-                    <p class="state-description">
-                        Click between states to experience the shift in perception, tone, and speed.
-                    </p>
-                    <p class="mobile-hint" id="mobile-hint">
-                        💡 Swipe left or right to switch states
-                    </p>
-                </div>
-
-                <!-- Statistics Display -->
-                <div class="statistics-panel">
-                    <div class="stat-item">
-                        <span class="stat-label">Manic:</span>
-                        <span class="stat-value" id="manic-time">0:00</span>
-                    </div>
-                    <div class="stat-item">
-                        <span class="stat-label">Mixed:</span>
-                        <span class="stat-value" id="mixed-time">0:00</span>
-                    </div>
-                    <div class="stat-item">
-                        <span class="stat-label">Depressive:</span>
-                        <span class="stat-value" id="depressive-time">0:00</span>
-                    </div>
-                </div>
-
-                <!-- Controls -->
-                <div class="controls">
-                    <button id="info-btn" class="control-btn" title="Show Information">
-                        <span>ℹ️</span>
-                    </button>
-                    <button id="fullscreen-btn" class="control-btn" title="Fullscreen">
-                        <span>⛶</span>
-                    </button>
-                    <button id="share-btn" class="control-btn" title="Share">
-                        <span>🔗</span>
-                    </button>
-                    <button id="timeline-btn" class="control-btn" title="Mood Timeline">
-                        <span>📊</span>
-                    </button>
-                    <label class="control-toggle">
-                        <input type="checkbox" id="auto-transition">
-                        <span>Auto</span>
-                    </label>
-                </div>
-
-                <!-- Intensity Controls -->
-                <div class="intensity-controls">
-                    <label class="intensity-label">
-                        <span>Intensity:</span>
-                        <input type="range" id="intensity-slider" min="0.5" max="2" step="0.1" value="1">
-                        <span id="intensity-value">100%</span>
-                    </label>
-                </div>
-
-                <!-- Visual elements that change with state -->
+                <!-- Visual elements that change with state - CENTER STAGE -->
                 <div class="visual-elements">
                     <!-- Emotional State Images - All 7 images for smooth transitions -->
                     <div class="state-images">
@@ -125,6 +48,89 @@
                         <div class="wave wave-2"></div>
                         <div class="wave wave-3"></div>
                     </div>
+                </div>
+
+                <!-- State indicator - Below image -->
+                <div class="state-indicator">
+                    <span class="current-state">Depressive</span>
+                </div>
+
+                <!-- Dynamic thoughts/feelings -->
+                <div class="thoughts-container">
+                    <p class="thought-text" id="thought-text">
+                        Everything feels heavy. Time moves slowly.
+                    </p>
+                </div>
+
+                <!-- State toggle buttons - Primary controls -->
+                <div class="state-toggle">
+                    <button id="manic-btn" class="state-btn manic-btn">
+                        <span>Manic</span>
+                    </button>
+                    <button id="mixed-btn" class="state-btn mixed-btn">
+                        <span>Mixed</span>
+                    </button>
+                    <button id="depressive-btn" class="state-btn depressive-btn active">
+                        <span>Depressive</span>
+                    </button>
+                </div>
+
+                <!-- Secondary controls - Compact row -->
+                <div class="secondary-controls">
+                    <!-- Statistics Display -->
+                    <div class="statistics-panel">
+                        <div class="stat-item">
+                            <span class="stat-label">Manic:</span>
+                            <span class="stat-value" id="manic-time">0:00</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-label">Mixed:</span>
+                            <span class="stat-value" id="mixed-time">0:00</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-label">Depressive:</span>
+                            <span class="stat-value" id="depressive-time">0:00</span>
+                        </div>
+                    </div>
+
+                    <!-- Controls -->
+                    <div class="controls">
+                        <button id="info-btn" class="control-btn" title="Show Information">
+                            <span>ℹ️</span>
+                        </button>
+                        <button id="fullscreen-btn" class="control-btn" title="Fullscreen">
+                            <span>⛶</span>
+                        </button>
+                        <button id="share-btn" class="control-btn" title="Share">
+                            <span>🔗</span>
+                        </button>
+                        <button id="timeline-btn" class="control-btn" title="Mood Timeline">
+                            <span>📊</span>
+                        </button>
+                        <label class="control-toggle">
+                            <input type="checkbox" id="auto-transition">
+                            <span>Auto</span>
+                        </label>
+                    </div>
+
+                    <!-- Intensity Controls -->
+                    <div class="intensity-controls">
+                        <label class="intensity-label">
+                            <span>Intensity:</span>
+                            <input type="range" id="intensity-slider" min="0.5" max="2" step="0.1" value="1">
+                            <span id="intensity-value">100%</span>
+                        </label>
+                    </div>
+                </div>
+
+                <!-- Description - Subtle hint -->
+                <div class="description">
+                    <p class="state-description">
+                        Click between states to experience the shift in perception, tone, and speed.
+                    </p>
+                    <p class="mobile-hint" id="mobile-hint">
+                        💡 Swipe left or right to switch states
+                    </p>
                 </div>
             </main>
 
