Integrate real images: Add all 7 state images (-3 to +3) with progressive transition system

--- a/index.html
+++ b/index.html
@@ -65,22 +65,49 @@
                             <div class="ring ring-3"></div>
                         </div>
                         <div class="image-container">
-                            <!-- Replace with your actual images -->
-                            <img src="images/depressive.png" 
-                                 alt="Depressive State" 
+                            <!-- All 7 state images for smooth progressive transitions -->
+                            <img src="images/-3.png" 
+                                 alt="State -3 (Most Depressive)" 
                                  class="state-image active" 
-                                 id="depressive-image"
+                                 id="image-neg3"
+                                 data-value="-3"
                                  loading="eager">
-                            <img src="images/positive.png" 
-                                 alt="Manic State" 
+                            <img src="images/-2.png" 
+                                 alt="State -2" 
                                  class="state-image hidden" 
-                                 id="manic-image"
-                                 loading="lazy">
-                            <img src="images/neutral.png" 
-                                 alt="Mixed State" 
+                                 id="image-neg2"
+                                 data-value="-2"
+                                 loading="eager">
+                            <img src="images/-1.png" 
+                                 alt="State -1" 
                                  class="state-image hidden" 
-                                 id="mixed-image"
-                                 loading="lazy">
+                                 id="image-neg1"
+                                 data-value="-1"
+                                 loading="eager">
+                            <img src="images/0.jpg" 
+                                 alt="State 0 (Neutral/Mixed)" 
+                                 class="state-image hidden" 
+                                 id="image-0"
+                                 data-value="0"
+                                 loading="eager">
+                            <img src="images/1.jpg" 
+                                 alt="State 1" 
+                                 class="state-image hidden" 
+                                 id="image-1"
+                                 data-value="1"
+                                 loading="eager">
+                            <img src="images/2.jpg" 
+                                 alt="State 2" 
+                                 class="state-image hidden" 
+                                 id="image-2"
+                                 data-value="2"
+                                 loading="eager">
+                            <img src="images/3.jpg" 
+                                 alt="State 3 (Most Manic)" 
+                                 class="state-image hidden" 
+                                 id="image-3"
+                                 data-value="3"
+                                 loading="eager">
                         </div>
                     </div>
 
