Polish header, tighten layout widths, improve stats styling, tweak time format

--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
             <header>
                 <h1 class="artwork-title">Dual Spectrum</h1>
                 <p class="artwork-subtitle">An Interactive Expression of Bipolar I Disorder</p>
-                <p class="artwork-meta">Destiny A., Christian H., Thomas M., Aran S. (2025) • Northwest Vista</p>
+                <p class="artwork-meta">
+                    Destiny A., Christian H., Thomas M., Aran S. (2025)
+                    <span>Northwest Vista</span>
+                </p>
             </header>
 
             <!-- Main Content -->
