--- a/index.html
+++ b/index.html
@@ -259,6 +259,37 @@
         <audio id="depressive-audio" loop preload="none">
             <source src="audio/depressive-ambient.mp3" type="audio/mpeg">
         </audio>
+
+        <!-- Chatbot -->
+        <div class="chatbot-container" id="chatbot-container">
+            <div class="chatbot-header">
+                <h3>Mental Health Assistant</h3>
+                <button class="chatbot-close" id="chatbot-close" aria-label="Close chatbot">×</button>
+            </div>
+            <div class="chatbot-messages" id="chatbot-messages">
+                <div class="chatbot-message bot-message">
+                    <div class="message-content">
+                        <p>Hello! I'm here to help answer questions about bipolar disorder, this artwork, and mental health resources. How can I assist you today?</p>
+                    </div>
+                </div>
+            </div>
+            <div class="chatbot-input-container">
+                <input type="text" 
+                       id="chatbot-input" 
+                       class="chatbot-input" 
+                       placeholder="Ask a question about bipolar disorder, the artwork, or mental health..."
+                       aria-label="Chatbot input">
+                <button class="chatbot-send" id="chatbot-send" aria-label="Send message">Send</button>
+            </div>
+            <div class="chatbot-quick-actions">
+                <button class="quick-action-btn" data-question="What is bipolar disorder?">What is bipolar disorder?</button>
+                <button class="quick-action-btn" data-question="What are the symptoms?">What are the symptoms?</button>
+                <button class="quick-action-btn" data-question="I need help">I need help</button>
+            </div>
+        </div>
+        <button class="chatbot-toggle" id="chatbot-toggle" aria-label="Open chatbot">
+            <span class="chatbot-icon">💬</span>
+        </button>
     </div>
 
     <!-- JavaScript -->
