Update audio file paths to use new audio files (manic.mp3, neutral.mp3, depressive.mp3)

--- a/index.html
+++ b/index.html
@@ -249,15 +249,15 @@
             </div>
         </div>
 
-        <!-- Audio Elements (Optional - add your audio files) -->
+        <!-- Audio Elements -->
         <audio id="manic-audio" loop preload="none">
-            <source src="audio/manic-ambient.mp3" type="audio/mpeg">
+            <source src="audio/manic.mp3" type="audio/mpeg">
         </audio>
         <audio id="mixed-audio" loop preload="none">
-            <source src="audio/mixed-ambient.mp3" type="audio/mpeg">
+            <source src="audio/neutral.mp3" type="audio/mpeg">
         </audio>
         <audio id="depressive-audio" loop preload="none">
-            <source src="audio/depressive-ambient.mp3" type="audio/mpeg">
+            <source src="audio/depressive.mp3" type="audio/mpeg">
         </audio>
 
         <!-- Chatbot -->
