--- a/index.html
+++ b/index.html
@@ -191,14 +191,8 @@
                         <button class="control-btn" id="audio-btn" aria-label="Toggle Audio" title="Toggle Audio (A)">
                             🔊
                         </button>
-                        <button class="control-btn" id="timeline-btn" aria-label="Show Timeline" title="Timeline">
-                            📊
-                        </button>
                         <button class="control-btn" id="info-btn" aria-label="Information" title="Information (I)">
                             ℹ️
-                        </button>
-                        <button class="control-btn" id="fullscreen-btn" aria-label="Fullscreen" title="Fullscreen (F)">
-                            ⛶
                         </button>
                         <button class="control-btn" id="share-btn" aria-label="Share" title="Share">
                             🔗
@@ -240,17 +234,12 @@
                 <p>The statistics tracker allows you to observe how time is spent in each state, reflecting the cyclical nature of the condition. The visual elements—from particle density to animation speed—adapt to represent the energy levels and intensity of each episode type. The optional audio integration provides ambient soundscapes that complement each emotional state.</p>
                 
                 <div class="modal-note">
-    <p><strong>Important Note:</strong> This project is an artistic and educational interpretation of Bipolar I Disorder. It is not a diagnostic instrument, medical tool, or substitute for professional mental health care. Bipolar I Disorder is a serious medical condition requiring evaluation and treatment by licensed professionals. If you or someone you know is experiencing symptoms or mental health concerns, please consult a qualified healthcare provider, psychiatrist, or contact a mental health crisis line.</p>
-
-    <p style="margin-top: 1rem;"><strong>COPYRIGHT & LEGAL NOTICE:</strong><br>
-    All original code, design, and written content are © 2025 Aran S., released under the MIT License.  
+    <p><strong>Important Note:</strong> All original code, design, and written content are © 2025 Aran S., released under the MIT License.  
     Unauthorized reproduction, redistribution, or commercial use of this project's original assets may constitute copyright infringement.  
     All images and audio used in this project originate from open-source or public-domain sources and comply with their respective licenses.<br><br>
 
     Crisis Text Line (U.S.): Text HOME to 741741<br>
-    SAMHSA National Helpline: 1-800-662-4357 <https>https://www.samhsa.gov/</https>
-
-    </p>
+    SAMHSA National Helpline: 1-800-662-4357 https://www.samhsa.gov/</p>
 </div>
             </div>
         </div>
