--- a/index.html
+++ b/index.html
@@ -235,8 +235,7 @@
                 
                 <div class="modal-note">
     <p><strong>Important Note:</strong> All original code, design, and written content are © 2025 Aran S., released under the MIT License.  
-    Unauthorized reproduction, redistribution, or commercial use of this project's original assets may constitute copyright infringement.  
-    All images and audio used in this project originate from open-source or public-domain sources and comply with their respective licenses.<br><br>
+    All images and audio used in this project originate from open-source or public-domain sources and comply with their respective licenses. audio is taken from https://www.myinstants.com/ and images from https://unsplash.com/<br><br>
 
     Crisis Text Line (U.S.): Text HOME to 741741<br>
     SAMHSA National Helpline: 1-800-662-4357 https://www.samhsa.gov/</p>
